Node Port Mode/nodeport-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr-1
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-bigip-ctlr-1
  template:
    metadata:
      name: k8s-bigip-ctlr-1
      labels:
        app: k8s-bigip-ctlr-1
    spec:
      serviceAccountName: k8s-bigip-ctlr-1
      containers:
        - name: k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr:v1.14"
          imagePullPolicy: IfNotPresent
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--bigip-url=https://10.1.1.10:443",
            "--insecure=true",
            "--bigip-partition=kubernetes",
            "--namespace=default",
            "--pool-member-type=nodeport",
            "--log-level=DEBUG"
          ]
