Node Port Mode/service-to-NGINX.yaml
apiVersion: v1
kind: Service
metadata:
   name: cis-to-nginx-ingress
   namespace: nginx-ingress
   labels:
     cis.f5.com/as3-tenant: AS3
     cis.f5.com/as3-app: MyApps
     cis.f5.com/as3-pool: ingress_pool
spec:
   type: NodePort
   ports:
   - port: 80
     targetPort: 80
     protocol: TCP
     name: http
   selector:
     app: nginx-ingress
